--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,13 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.launchdarkly/okhttp-eventsource
     implementation group: 'com.launchdarkly', name: 'okhttp-eventsource', version: '2.5.0'
+
+    // https://search.maven.org/artifact/org.opensearch.client/opensearch-rest-high-level-client/1.3.1/jar
+    implementation 'org.opensearch.client:opensearch-rest-high-level-client:1.3.1'
+
+    // https://search.maven.org/artifact/com.google.code.gson/gson/2.9.0/jar
+    implementation 'com.google.code.gson:gson:2.9.0'
+
 }
 
 test {
